Fix alignment of teacher image

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -747,7 +747,7 @@ section.course-info section.details .inner-wrapper section.course-staff {
 section.course-info section.details .inner-wrapper section.course-staff article.teacher .teacher-image {
     width: 120px;
     height: 160px;
-    margin: 5px 17px 0 0;
+    margin: 3px 17px 0 0;
 }
 
 section.course-info section.details .inner-wrapper section.course-staff article.teacher .teacher-image img {
